<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cap 4 -Android in sette giorni</string>
    <string name="action_settings">Impostazioni</string>
    <string name="no_items">Non ci sono elementi</string>
    <string name="read_permission">com.androidinsettegiorni.contentprovider.lentitems.READ"</string>
    <string name="write_permission">com.androidinsettegiorni.contentprovider.lentitems.WRITE</string>

    <string name="pref_screen">Screen preferenze</string>
    <string name="show_pref">Mostra Shared Preferences</string>
    <string name="username_summary">Inserisci il tuo username</string>
    <string name="password_summary">Inserisci la tua password</string>
    <string name="check_preference">Mantienimi loggato</string>
    <string name="list_options_summary">Esempio lista preferenze</string>
    <string name="list_options_title">Esempio lista</string>
    
     <string-array name="listOptions">
     <item>Opzione 1</item>
     <item>Opzione 2</item>
     <item>Opzione 3</item>
     </string-array>
 
   <string-array name="listValues">
     <item>1 selezionato</item>
     <item>2 selezionato</item>
     <item>3 selezionato</item>
   </string-array>
</resources>